kube/exchange.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange
  namespace: personal
spec:
  selector:
    matchLabels:
      app: exchange
  replicas: 1
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
      - name: exchange
        image: raphy02/exchange:0.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: exchange
  namespace: personal
  annotations:
    metallb.universe.tf/address-pool: production-public-ips
spec:
  selector:
    app: exchange
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: exchange
  namespace: personal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 21m
spec:
  tls:
  - hosts:
    - ec.raphaelbernhart.at
    secretName: ec-raphaelbernhart-at-tls
  rules:
  - host: ec.raphaelbernhart.at
    http:
      paths:
      - path: /
        backend:
          serviceName: exchange
          servicePort: 80
