kube/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange
  namespace: personal
spec:
  selector:
    matchLabels:
      app: exchange
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: exchange
    spec:
      containers:
      - name: exchange
        image: registry.raphaelbernhart.at/raphaelbernhart/exchange:0.2.5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "35M"
            cpu: "30m"
        volumeMounts:
        - name: exchange-persistent-storage
          mountPath: /app/storage
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: exchange-persistent-storage
        persistentVolumeClaim:
          claimName: exchange-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: exchange
  namespace: personal
  annotations:
    metallb.universe.tf/address-pool: production-public-ips
spec:
  selector:
    app: exchange
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: exchange
  namespace: personal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 101m
spec:
  tls:
  - hosts:
    - ec.raphaelbernhart.at
    secretName: ec-raphaelbernhart-at-tls
  rules:
  - host: ec.raphaelbernhart.at
    http:
      paths:
      - path: /
        backend:
          serviceName: exchange
          servicePort: 80
